# nx

./: .gitignore  .gitmodules  CMakeLists.txt  package-lock.json
modules/: CMakeLists.txt
modules/app/: CMakeLists.txt  Thread.cpp  main.cpp
modules/app/include/app/: App.hpp  Connection.hpp  Dispatcher.hpp  Event.hpp  EventLoop.hpp  Functor.hpp  Functor2.h  Functor_bad.hpp  Invoker.hpp  Invoker05.hpp  Loop.hpp  Object.hpp  Overload.h  Signal.hpp  Thread.hpp  nxapp.hpp
modules/app/include/nx/: app.hpp
modules/app/src/: App.cpp  Connection.cpp  Dispatcher.cpp  Event.cpp  EventLoop.cpp  Loop.cpp  Object.cpp  Signal.cpp  Thread.cpp  ThreadContext.cpp  Timer.cpp  nxapp.cpp
modules/app/unused/: Event.cpp  Event.hpp
modules/app/wip/: Connection.cpp  Connection.hpp
modules/asio/: CMakeLists.txt
modules/asio/src/: steady_timer.cpp
modules/asio/src/backend/: backend.cpp  backend_epoll.inl  backend_iocp.inl  backend_kevent.inl
modules/asio/src/context/: context_impl.cpp  context_impl.hpp  io_context.cpp  reactor_handle.cpp
modules/asio/src/handle_notifier/: handle_notifier.cpp  handle_notifier_impl.cpp  handle_notifier_impl.hpp
modules/asio/src/signal_set/: signal_set.cpp  signal_set_impl.cpp  signal_set_impl.hpp  signal_set_kevent.inl  signal_set_posix.inl  signal_set_windows.inl
modules/asio/tests/: CMakeLists.txt  backend_test.cpp  test_io_context.cpp  test_steady_timer.cpp
modules/common/: CMakeLists.txt
modules/common/include/nx/: common.hpp
modules/common/src/: common.cpp
modules/common/src/types/: utf8.cpp
modules/common/std_compat/nx/: exchange.hpp  filesystem.hpp  make_unique.hpp  optional.hpp  string_view.hpp  type_traits.hpp  variant.hpp
modules/common/tests/: CMakeLists.txt  nx_common_test_error.cpp  nx_common_test_result.cpp  nx_common_test_source_location.cpp  test_error.cpp  test_result.cpp  test_source_location.cpp  test_utf8.cpp
modules/core/: CMakeLists.txt
modules/core/include/core/: DataPool.h  Exception.hpp  Singleton.hpp
modules/core/include/nx/: core.hpp
modules/core/include/types/: singleton.hpp
modules/core/src/: App.cpp  Connection.cpp  Loop.cpp  Object.cpp  Signal.cpp  Thread.cpp  Timer.cpp  core.cpp
modules/core/src/App/: Application.cpp
modules/core/src/app/: AppFunctions.cpp  Application.cpp
modules/core/src/asio/: steady_timer.cpp
modules/core/src/object/: children_set.p.hpp  object.cpp  object_impl.p.cpp  object_impl.p.hpp
modules/core/tests/: CMakeLists.txt  asio_context.cpp  handle_notifier.cpp  try_meta_object.cpp
modules/core2/: CMakeLists.txt
modules/core2/demo/: CMakeLists.txt  signal_demo.cpp
modules/core2/src/: core2.cpp
modules/core2/src/app/: application.cpp
modules/core2/src/io_device/: io_device.cpp
modules/core2/src/loop/: loop.cpp
modules/core2/src/object/: connection_info.cpp  object.cpp
modules/core2/src/thread/: thread.cpp
modules/core2/src/timer/: timer.cpp
modules/core2/tests/: CMakeLists.txt  manual_test_application.cpp  manual_test_property.cpp  test_connections.cpp  test_nx_property.cpp  test_object_tree.cpp  test_property.cpp  test_signals.cpp
modules/io/: CMakeLists.txt
modules/io/include/nx/: io.hpp
modules/io/src/: io.cpp
modules/logger/: CMakeLists.txt
modules/logger/include/nx/: logger.hpp
modules/logging/: CMakeLists.txt
modules/logging/include/nx/: logger.hpp  logging.hpp
modules/logging/src/: formatter.cpp  logger.cpp  message.cpp  pattern_formatter.cpp  registry.cpp
modules/logging/tests/: CMakeLists.txt  logger_manual.cpp  test_levels.cpp  test_logger_manual.cpp  test_logger_manual_macros.cpp  test_pattern_formatter.cpp  test_registry.cpp  test_sinks.cpp
modules/macro/: CMakeLists.txt  macro.cpp
modules/macro/include/nx/: macro.hpp
modules/macro/scripts/: gen_limits.bat  gen_limits.cmake  gen_limits.sh  nx_macro_debug.py
modules/macro/tests/: CMakeLists.txt
modules/macro/tests/macro-tests/: main.test.cpp
modules/memory/: CMakeLists.txt
modules/memory/include/nx/: memory.hpp
modules/memory/src/: structure_pool.cpp
modules/network/: CMakeLists.txt
modules/network/demo/: CMakeLists.txt  buffered_echo_demo.cpp  framing_demo.cpp  http_server_demo.cpp  https_server_demo.cpp  resolver_demo.cpp  tcp_echo_demo.cpp  udp_echo_demo.cpp
modules/network/include/nx/: network.hpp
modules/network/src/: UdpSocket.cpp  buffer.cpp  network.cpp  read_accumulator.cpp  resolver.cpp  socket.cpp  types.cpp
modules/network/src/buffer/: read_accumulator.cpp  read_buffer.cpp
modules/network/src/detail/: socket_impl.hpp  socket_impl_posix.cpp  socket_impl_win.cpp
modules/network/src/framing/: delimiter_framer.cpp  length_prefix_framer.cpp
modules/network/src/http/: connection.cpp  request.cpp  request_parser.cpp  response.cpp  response_parser.cpp  router.cpp  server.cpp  static_handler.cpp  url.cpp
modules/network/src/tcp/: reconnector.cpp  server.cpp  socket.cpp
modules/network/src/tls/: context.cpp
modules/network/src/udp/: socket.cpp
modules/network/tests/: CMakeLists.txt  test_buffer.cpp  test_buffered_socket.cpp  test_framing.cpp  test_http.cpp  test_http_unit.cpp
modules/tg/: CMakeLists.txt
modules/tg/demo/: CMakeLists.txt  echo_bot_demo.cpp
modules/tg/src/: bot.cpp
modules/tui/: CMakeLists.txt
modules/tui/demo/: CMakeLists.txt  animation_demo.cpp  controls_demo.cpp  form_demo.cpp  frame_demo.cpp  input_demo.cpp  key_check_demo.cpp  layout_demo.cpp  line_edit_demo.cpp  menu_demo.cpp  scroll_demo.cpp  tab_demo.cpp  theme_demo.cpp  tier1_demo.cpp  widget_demo.cpp
modules/tui/src/: App.cpp  Terminal.cpp  ansi_codes.p.hpp  screen.cpp  terminal.cpp
modules/tui/src/animation/: animation_manager.cpp  animator.cpp
modules/tui/src/graphics/: canvas.cpp  display_buffer.cpp  painter.cpp
modules/tui/src/input/: escape_parser.cpp  input_reader.cpp
modules/tui/src/layout/: box.cpp  flow_layout.cpp  free_layout.cpp  (+4 more)
modules/tui/tests/: CMakeLists.txt  test_escape_parser.cpp
tests/: CMakeLists.txt
tests/core-test-func/: CMakeLists.txt
tests/macro-tests/: limits.test.cpp  main.test.cpp  tuple.test.cpp
(+418 files in other folders)
